syntax = "proto3";

option java_multiple_files = false;  // ИЗМЕНИТЕ НА false
option java_package = "com.example.InventoryService.grpc";
option java_outer_classname = "InventoryProto";

service InventoryService {
  rpc checkAvailability(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 productId = 1;
}

message ProductResponse {
  int64 productId = 1;
  double price = 2;
  double sale = 3;
  int32 quantity = 4;
}